--- a/A Python Intro/Python II-lists-tuples-sets.ipynb
+++ b/A Python Intro/Python II-lists-tuples-sets.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Indexing can also be done in reverse order. That is the last element can be accessed first. Here, indexing starts from -1. Thus index value -1 will be orange and index -2 will be apple."
+    "Indexing can also be done in reverse order. That is the last element that can be accessed first. Here, indexing starts from -1. Thus index value -1 will be orange and index -2 will be apple."
    ]
   },
   {
